tests/ui/recursion_limit/invalid_digit.stderr
error: `limit` must be a non-negative integer
  --> $DIR/invalid_digit.rs:3:1
   |
LL | #![recursion_limit = "-100"]
   | ^^^^^^^^^^^^^^^^^^^^^------^
   |                      |
   |                      not a valid integer

error: `limit` must be a non-negative integer
  --> $DIR/invalid_digit.rs:3:1
   |
LL | #![recursion_limit = "-100"]
   | ^^^^^^^^^^^^^^^^^^^^^------^
   |                      |
   |                      not a valid integer
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

